get delete group working
